--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
     <link rel="stylesheet" href="./css/initial.css">
     <link rel="stylesheet" href="./css/swiper.min.css">
     <link rel="stylesheet" href="./css/swiper_custom.css">
-    <link rel="stylesheet" href="./css/common_footer.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/main.css">
     <script src="./js/jquery-3.5.1.min.js"></script>
 
 </head>
 
 <body>
+
+    <!-- top btn -->
+    <div class="top_btn">
+        <img src="./img/common/top_icon.png" alt="위 화살표">
+    </div>
     <!-- header start -->
     <header>
         <!-- htop start -->
@@ -163,6 +168,7 @@
                         </li>
                     </ul>
                 </div>
+                <!-- user_menu -->
                 <div class="user_menu">
                     <a href="#" class="membership">회원가입</a>
                     <select>
@@ -753,6 +759,7 @@
 
     <!-- script -->
     <script src="./js/swiper.min.js"></script>
+    <script src="./js/common.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
