sub_html_update
- 인천광역시 홈페이지의 서브페이지를 완성했습니다.
- 인천소식, 소통참여, 종합민원, 인천소개, 로그인 총 5개의 서브페이지를 제작했습니다.
- 메인페이지 슬라이더 에러는 내일 해결예정 입니다.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <title>인천광역시</title>
+    <meta name="description" content="인천광역시">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
@@ -134,14 +135,14 @@
                         </a>
                     </h1>
                 </div>
-                <!-- hmid menu -->
+                <!-- quick menu -->
                 <div class="menu">
                     <ul>
                         <li><a href="#"><img src="./img/main/weather.jpg" alt="해, 바다, 온도계 아이콘"> 날씨정보</a></li>
                         <li><a href="#">온라인통합예약</a></li>
                         <li><a href="#">인천데이터포털</a></li>
                         <li><a href="#">정보공개포털</a></li>
-                        <li><a href="#">로그인</a></li>
+                        <li><a href="./sub_html/login.html">로그인</a></li>
                     </ul>
                 </div>
             </div>
@@ -153,10 +154,10 @@
             <div class="inner">
                 <div class="menu">
                     <ul>
-                        <li><a href="#">인천소식</a></li>
-                        <li><a href="#">소통참여</a></li>
-                        <li><a href="#">종합민원</a></li>
-                        <li><a href="#">인천소개</a></li>
+                        <li><a href="./sub_html/news.html">인천소식</a></li>
+                        <li><a href="./sub_html/join.html">소통참여</a></li>
+                        <li><a href="./sub_html/complaint.html">종합민원</a></li>
+                        <li><a href="./sub_html/introduce.html">인천소개</a></li>
                         <li><a href="#">분야별<img src="./img/main/dot_img.png" alt="점4개의 이미지"></a></li>
                         <li><a href="#" class="all_menu">전체메뉴
                                 <span class="menu_btn">
