--- a/sub_html/introduce.html
+++ b/sub_html/introduce.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>새소식</title>
-    <meta name="description" content="새소식">
+    <title>인천소개</title>
+    <meta name="description" content="인천소개">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/sub_html_header.css">
     <link rel="stylesheet" href="../css/sub_html_common.css">
-    <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/introduce.css">
     <script src="../js/jquery-3.5.1.min.js"></script>
 </head>
 
@@ -165,7 +165,7 @@
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li>&#62;</li>
-                    <li><a href="#">소통참여</a></li>
+                    <li><a href="#">인천소식</a></li>
                     <li>&#62;</li>
                     <li class="on"><a href="#">새소식</a></li>
                 </ul>
@@ -180,202 +180,170 @@
             <!-- lnb -->
             <div class="lnb">
                 <div class="title">
-                    <h3>인천소식</h3>
+                    <h3>인천소개</h3>
                 </div>
                 <ul>
-                    <li class="on"><a href="#">새소식</a></li>
-                    <li><a href="#">주요행사정보</a></li>
-                    <li class="accordion"><a href="#" class="arrow">보도/해명</a></li>
-                    <div class="submenu">
+                    <li class="accordion on"><a href="#" class="arrow_up">인천안내</a></li>
+                    <div class="submenu active">
                         <ul>
-                            <li><a href="#">보도자료</a></li>
-                            <li><a href="#">바로잡습니다.</a></li>
+                            <li class="on"><a href="#">기본현황</a></li>
+                            <li><a href="#">행정구역</a></li>
+                            <li><a href="#">인천상징</a></li>
+                            <li><a href="#">인천색<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                            <li><a href="#">인천노래</a></li>
+                            <li><a href="#">미디어로 보는 인천</a></li>
+                            <li><a href="#">역대시장</a></li>
+                            <li><a href="#">시민상</a></li>
                         </ul>
                     </div>
-                    <li class="accordion"><a href="#" class="arrow">고시/공고/시보</a></li>
+                    <li class="accordion"><a href="#" class="arrow">시청안내</a></li>
                     <div class="submenu">
                         <ul>
-                            <li><a href="http://www.naver.com">고시공고<img src="../img/common/linkHttp.png" alt="외부링크"></a>
-                            </li>
-                            <li><a href="#">인천시보</a></li>
-                            <li><a href="#">반상회보</a></li>
-                            <li><a href="#">입법예고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
+                            <li><a href="#">조직도</a></li>
+                            <li><a href="#">직원/담당업무</a></li>
+                            <li><a href="#">전화번호/팩스번호 안내</a></li>
+                            <li><a href="#">중앙협력본부 안내</a></li>
+                            <li><a href="#">부서위치안내</a></li>
+                            <li><a href="#">주차장 이용안내</a></li>
+                            <li><a href="#">찾아오시는 길</a></li>
+                            <li><a href="#">시설물 대관 안내</a></li>
                         </ul>
                     </div>
-                    <li><a href="#">미디어허브</a></li>
-                    <li><a href="#">카드뉴스</a></li>
+                    <li class="accordion"><a href="#" class="arrow">인천역사</a></li>
+                    <div class="submenu">
+                        <ul>
+                            <li><a href="#">유래와 연혁</a></li>
+                            <li><a href="#">시대별 역사</a></li>
+                            <li><a href="#">인천설화</a></li>
+                            <li><a href="#">지명유래</a></li>
+                            <li><a href="#">인천인물</a></li>
+                            <li><a href="#">사진으로 보는 역사</a></li>
+                            <li><a href="#">오늘의 역사</a></li>
+                            <li><a href="#">역사자료실</a></li>
+                            <li><a href="#">역사자료관</a></li>
+                        </ul>
+                    </div>
+                    <li class="accordion"><a href="#" class="arrow">賞賞인천</a></li>
+                    <div class="submenu">
+                        <ul>
+                            <li><a href="#">기관표창</a></li>
+                            <li><a href="#">표창추천 및 후보자 공개검증</a></li>
+                        </ul>
+                    </div>
+                    <li class="accordion"><a href="#" class="arrow">행정자료실</a></li>
+                    <div class="submenu">
+                        <ul>
+                            <li><a href="#">행정자료실 이용안내</a></li>
+                            <li><a href="#">도서목록</a></li>
+                        </ul>
+                    </div>
+                    <li class="accordion"><a href="#" class="arrow">국제교류</a></li>
+                    <div class="submenu">
+                        <ul>
+                            <li><a href="#">자매도시</a></li>
+                            <li><a href="#">우호도시</a></li>
+                            <li><a href="#">국제기구 소개</a></li>
+                            <li><a href="#">국제기구 소식</a></li>
+                            <li><a href="#">교류정보</a></li>
+                            <li><a href="#">해외도시 교류사진전</a></li>
+                        </ul>
+                    </div>
                 </ul>
             </div>
             <!-- content -->
             <div class="content">
                 <!-- title -->
                 <div class="title">
-                    <h4>새소식</h4>
+                    <h4>기본현황</h4>
                     <div class="btn">
                         <a href="#"><img src="../img/sub_html_common/share.svg" alt="공유"></a>
                         <a href="#"><img src="../img/sub_html_common/print.svg" alt="프린트"></a>
                     </div>
                 </div>
-                <!-- table_info -->
-                <div class="table_info">
-                    <div class="page">
-                        <p>1/789페이지(전체 7895건)</p>
+                <!-- introduce banner -->
+                <div class="introduce_banner">
+                    <img src="../img/introduce/introduce_banner.jpg" alt="인천대교사진">
+                </div>
+                <!-- list_wrap -->
+                <div class="list_wrap">
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">위치</p>
+                        <p class="basic_text">인천의 수리적 위치는 대략 126°37′E, 37°28′N에 해당되는데 이는 한반도의 한가운데이며 황해에 접하여 있고 한강의 하류에
+                            위치해 있다. 대한민국의 수도인 서울과 28 km거리에 위치한 인천은 샌프란시스코, 워싱턴, 스페인 남부지역과 비슷한 위도에 위치해 있다.</p>
                     </div>
-                    <div class="search_box">
-                        <form>
-                            <select>
-                                <option>분야선택</option>
-                                <option>교통</option>
-                                <option>농업/해양</option>
-                                <option>문화/관광</option>
-                                <option>도시</option>
-                                <option>경제</option>
-                                <option>건강</option>
-                                <option>복지</option>
-                                <option>안전</option>
-                                <option>환경</option>
-                                <option>행정</option>
-                                <option>해당없음</option>
-                            </select>
-                            <select>
-                                <option>제목</option>
-                                <option>내용</option>
-                                <option>담당부서</option>
-                            </select>
-                            <input type="text" placeholder="검색어를 입력하세요">
-                            <button type="submit">검색</button>
-                        </form>
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">기후</p>
+                        <p class="basic_text">인천은 대륙성 기후에 속하면서도 해안에 위치하여 다른 내륙지방보다는 해양성 기후의 특성도 일부 가지고 있어서, 기온의 연교차가 적은
+                            편이다. 연평균 기온은 12.5℃로서 일 최고 기온의 극값은 38.9℃(1949.8.16), 일 최저 기온의 극값은 -21.0℃(1931.1.11)이다. 강수량은 연
+                            1,134.4mm로 비슷한 위도지역에 비해 적은 편이다. 연평균 풍속은 3.06m/s이며, 주 풍향은 북북서풍이고 다음으로 북, 북서풍이 우세하다. 풍속이 가장 강한
+                            달은 2~ 4월이며, 가장 약한 달은 9월이다. 황사현상이 타 지역에 비해 빈도수가 많고 계속 시간이 길게 나타나고 있으며, 화중지방에서 다가오는 이동성 고기압의
+                            영향으로 남서풍 유입이 많아지면 해상의 안개가 짙어지고 낮 기온 상승을 저지하는 원인이 되기도 한다. 인천지방의 안개 발생빈도는 내륙에 비해 높은 편이며, 4월부터
+                            안개 발생일수가 증가하기 시작하여 5,6월에 가장 많으며 8월 부터 급격히 줄어든다. 인천지방의 2018년 안개일수는 52일 이다.</p>
+                    </div>
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">면적</p>
+                        <p class="basic_text">인천은 1981년 7월 1일 직할시로 승격 당시 면적은 201.21km²였으며, 1989년 1월 1일 경기도 김포군
+                            계양면(30.9km²)과 옹진군 영종·용유면(72.0km²) 편입으로 면적이 310.83km²가 되었으며, 1995년 1월 1일 광역시로 명칭 변경과 같은 해 3월
+                            1일 강화군(401.3km²), 옹진군(163.6km²), 김포군 검단면(42.2km²)의 통합으로 면적이 955km²가 되었으며, 2000년 이후 공유수면매립
+                            등으로 2005년에는 면적이 994.12km²로 전 국토 면적의 1%로 확장되었으며 2020년 12월 31일 기준 1,065.23km²에 이르고 있다.</p>
+                    </div>
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">지형</p>
+                        <p class="basic_text">인천의 산지는 마니산(469m)과 계양산(395m), 삼각산(343m) 등 10여개의 산을 제외하고는 해발 300m이내의 구릉성
+                            산지이며 큰 하천의 발달도 없다. 한강으로 유입하는 하천은 굴포천, 청천천, 계산천 등이 있고, 황해로 유입하는 하천으로는 북쪽의 시천천, 공촌천과 남쪽의 승기천,
+                            만수천, 장수천, 운연천 등이 있으며, 굴포천(11.5㎞)을 제외하면 승기천(6.2㎞), 검단천(6.74㎞)등 대부분 하천 연장이 10㎞미만이다. 인천의 해안은
+                            리아스식 해안(rias coast)으로 해안선이 길고 복잡하며 섬이 많다. 인천에는 모두 168개의 섬이 있으며, 이중 128개가 사람이 살지 않는 무인도이다.
+                        </p>
+                    </div>
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">세계를 향한 동북아의 국제도시</p>
+                        <p class="basic_text">인천항의 확장과 인천지하철의 개통(1999.10), 인천국제공항의 개항(2001.3), 공유수면의 매립과 각종 산업·물류단지의 조성,
+                            관광·레저단지와 새로운 주거단지의 건설, 고속화도로의 확대, 교육·문화시설의 증대, 송도신도시 개발과 경제자유구역청의 개청(2003.10),
+                            인천대교개통(2009.10), 청라·영종지구개발 및 도시재생사업, 2014아시안게임 성공 개최, "인천 2030 미래이음 비전" 발표(2019.11.) 등 인천은
+                            지금도 개발과 성장을 지속하고 있다.
+                        </p>
                     </div>
                 </div>
-                <!-- table -->
-                <table>
-                    <tr>
-                        <th>번호</th>
-                        <th>분야</th>
-                        <th>제목</th>
-                        <th>담당부서</th>
-                        <th>작성일</th>
-                        <th>조회수</th>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>-</td>
-                        <td><a href="#">(6.14.~7.4.) 사회적 거리두기 2단계 기간 연장 안내</a></td>
-                        <td>감염병 관리과</td>
-                        <td>2021-06-13</td>
-                        <td>521</td>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>행정</td>
-                        <td><a href="">｢2021. 하계 대학생 아르바이트｣ 참여자 모집안내</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-08</td>
-                        <td>16954</td>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>-</td>
-                        <td><a href="#">(6.14.~7.4.) 사회적 거리두기 2단계 기간 연장 안내</a></td>
-                        <td>감염병 관리과</td>
-                        <td>2021-06-13</td>
-                        <td>521</td>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>행정</td>
-                        <td><a href="">｢2021. 하계 대학생 아르바이트｣ 참여자 모집안내</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-08</td>
-                        <td>16954</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>교통</td>
-                        <td><a href="#">송도,남동공단 스마트 모빌리티 시민참여단 3기 모집</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-14</td>
-                        <td>46</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>문화/관광</td>
-                        <td><a href="#">2021 풍류 온(溫, On) 전통문화예술한마당 공연 안내</a></td>
-                        <td>문화유산과</td>
-                        <td>2021-06-14</td>
-                        <td>19</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>교통</td>
-                        <td><a href="#">송도,남동공단 스마트 모빌리티 시민참여단 3기 모집</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-14</td>
-                        <td>46</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>문화/관광</td>
-                        <td><a href="#">2021 풍류 온(溫, On) 전통문화예술한마당 공연 안내</a></td>
-                        <td>문화유산과</td>
-                        <td>2021-06-14</td>
-                        <td>19</td>
-                    </tr>
-                    <tr>
-                        <td>7888</td>
-                        <td>문화/관광</td>
-                        <td><a href="#">「한강하구 랜선 사진 콘서트」 행사 개최 안내</a></td>
-                        <td>남북협력담당관</td>
-                        <td>2021-06-11</td>
-                        <td>803</td>
-                    </tr>
-                    <tr>
-                        <td>7887</td>
-                        <td>행정</td>
-                        <td><a href="#">시 주간행사계획(2021.06.14~06.20)</a></td>
-                        <td>총무과</td>
-                        <td>2021-06-11</td>
-                        <td>233</td>
-                    </tr>
-                    <tr>
-                        <td>7886</td>
-                        <td>문화/관광</td>
-                        <td><a href="#">「한강하구 랜선 사진 콘서트」 행사 개최 안내</a></td>
-                        <td>남북협력담당관</td>
-                        <td>2021-06-11</td>
-                        <td>803</td>
-                    </tr>
-                    <tr>
-                        <td>7885</td>
-                        <td>행정</td>
-                        <td><a href="#">시 주간행사계획(2021.06.14~06.20)</a></td>
-                        <td>총무과</td>
-                        <td>2021-06-11</td>
-                        <td>233</td>
-                    </tr>
-                </table>
-                <!-- pagination -->
-                <div class="pagination">
-                    <ul>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_first.png" alt="처음페이지로"></a>
-                        </li>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_prev.png" alt="이전페이지로"></a>
-                        </li>
-                        <li class="on"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">6</a></li>
-                        <li><a href="#">7</a></li>
-                        <li><a href="#">8</a></li>
-                        <li><a href="#">9</a></li>
-                        <li><a href="#">10</a></li>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_next.png" alt="다음페이지로"></a>
-                        </li>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_last.png" alt="마지막페이지로"></a>
-                        </li>
-                    </ul>
+                <!-- open -->
+                <div class="open">
+                    <div class="top">
+                        <a href="#"><img src="../img/sub_html_common/opentype.jpg" alt="출처표시 공공누리 공공저작물 자유이용허락"></a>
+                        <span>공공누리:출처표시 (제1유형)</span>
+                    </div>
+                    <div class="bottom">
+                        <span>자료관리담당자</span>
+                        <ul>
+                            <li>담당부서 : 협치인권담당관</li>
+                            <li>문의처 : 032-40-3394</li>
+                            <li>최종업데이트:2021-02-02</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- satisfaction -->
+                <div class="satisfaction">
+                    <div class="left">
+                        <p>이 페이지에서 제공하는 정보에 대하여 만족하십니까?</p>
+                        <div class="check">
+                            <input type="radio" id="매우불만족" name="check"><label for="매우불만족">매우불만족</label>
+                            <input type="radio" id="불만족" name="check"><label for="불만족">불만족</label>
+                            <input type="radio" id="보통" name="check"><label for="보통">보통</label>
+                            <input type="radio" id="만족" name="check"><label for="만족">만족</label>
+                            <input type="radio" id="매우만족" name="check"><label for="매우만족">매우만족</label>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <a href="#">평점주기</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -481,7 +449,6 @@
     <!-- footer end -->
     <script src="../js/common.js"></script>
     <script src="../js/sub_html.js"></script>
-    <script src="../js/news.js"></script>
 </body>
 
 </html>
