--- a/sub_html/login.html
+++ b/sub_html/login.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>새소식</title>
-    <meta name="description" content="새소식">
+    <title>로그인</title>
+    <meta name="description" content="로그인">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/sub_html_header.css">
     <link rel="stylesheet" href="../css/sub_html_common.css">
-    <link rel="stylesheet" href="../css/news.css">
+    <link rel="stylesheet" href="../css/login.css">
     <script src="../js/jquery-3.5.1.min.js"></script>
 </head>
 
@@ -165,7 +165,7 @@
                 <ul>
                     <li><a href="#">HOME</a></li>
                     <li>&#62;</li>
-                    <li><a href="#">소통참여</a></li>
+                    <li><a href="#">인천소식</a></li>
                     <li>&#62;</li>
                     <li class="on"><a href="#">새소식</a></li>
                 </ul>
@@ -180,202 +180,184 @@
             <!-- lnb -->
             <div class="lnb">
                 <div class="title">
-                    <h3>인천소식</h3>
+                    <h3>회원</h3>
                 </div>
                 <ul>
-                    <li class="on"><a href="#">새소식</a></li>
-                    <li><a href="#">주요행사정보</a></li>
-                    <li class="accordion"><a href="#" class="arrow">보도/해명</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="#">보도자료</a></li>
-                            <li><a href="#">바로잡습니다.</a></li>
-                        </ul>
-                    </div>
-                    <li class="accordion"><a href="#" class="arrow">고시/공고/시보</a></li>
-                    <div class="submenu">
-                        <ul>
-                            <li><a href="http://www.naver.com">고시공고<img src="../img/common/linkHttp.png" alt="외부링크"></a>
-                            </li>
-                            <li><a href="#">인천시보</a></li>
-                            <li><a href="#">반상회보</a></li>
-                            <li><a href="#">입법예고<img src="../img/common/linkHttp.png" alt="외부링크"></a></li>
-                        </ul>
-                    </div>
-                    <li><a href="#">미디어허브</a></li>
-                    <li><a href="#">카드뉴스</a></li>
+                    <li class="on"><a href="#">로그인</a></li>
+                    <li><a href="#">회원가입</a></li>
+                    <li><a href="#">아이디 찾기</a></li>
+                    <li><a href="#">비밀번호 찾기</a></li>
                 </ul>
             </div>
             <!-- content -->
             <div class="content">
                 <!-- title -->
                 <div class="title">
-                    <h4>새소식</h4>
+                    <h4>로그인</h4>
                     <div class="btn">
                         <a href="#"><img src="../img/sub_html_common/share.svg" alt="공유"></a>
                         <a href="#"><img src="../img/sub_html_common/print.svg" alt="프린트"></a>
                     </div>
                 </div>
-                <!-- table_info -->
-                <div class="table_info">
-                    <div class="page">
-                        <p>1/789페이지(전체 7895건)</p>
+                <!-- welcome -->
+                <div class="welcome">
+                    <div class="left">
+                        <p class="title_text">새로운 인천특별시대 인천광역시에오신 것을 환영합니다.</p>
+                        <p>인천광역시 홈페이지에서는 보다 많은 사용자들의 원활한 서비스 이용과 온라인 상에서의 익명 사용으로 인한 피해 등을 방지하기 위해 회원님에 대한 실명제를 시행하고
+                            있습니다.</p>
                     </div>
-                    <div class="search_box">
-                        <form>
-                            <select>
-                                <option>분야선택</option>
-                                <option>교통</option>
-                                <option>농업/해양</option>
-                                <option>문화/관광</option>
-                                <option>도시</option>
-                                <option>경제</option>
-                                <option>건강</option>
-                                <option>복지</option>
-                                <option>안전</option>
-                                <option>환경</option>
-                                <option>행정</option>
-                                <option>해당없음</option>
-                            </select>
-                            <select>
-                                <option>제목</option>
-                                <option>내용</option>
-                                <option>담당부서</option>
-                            </select>
-                            <input type="text" placeholder="검색어를 입력하세요">
-                            <button type="submit">검색</button>
-                        </form>
-                    </div>
+                    <div class="right"></div>
                 </div>
-                <!-- table -->
-                <table>
-                    <tr>
-                        <th>번호</th>
-                        <th>분야</th>
-                        <th>제목</th>
-                        <th>담당부서</th>
-                        <th>작성일</th>
-                        <th>조회수</th>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>-</td>
-                        <td><a href="#">(6.14.~7.4.) 사회적 거리두기 2단계 기간 연장 안내</a></td>
-                        <td>감염병 관리과</td>
-                        <td>2021-06-13</td>
-                        <td>521</td>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>행정</td>
-                        <td><a href="">｢2021. 하계 대학생 아르바이트｣ 참여자 모집안내</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-08</td>
-                        <td>16954</td>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>-</td>
-                        <td><a href="#">(6.14.~7.4.) 사회적 거리두기 2단계 기간 연장 안내</a></td>
-                        <td>감염병 관리과</td>
-                        <td>2021-06-13</td>
-                        <td>521</td>
-                    </tr>
-                    <tr class="notice">
-                        <td><span>공지</span></td>
-                        <td>행정</td>
-                        <td><a href="">｢2021. 하계 대학생 아르바이트｣ 참여자 모집안내</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-08</td>
-                        <td>16954</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>교통</td>
-                        <td><a href="#">송도,남동공단 스마트 모빌리티 시민참여단 3기 모집</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-14</td>
-                        <td>46</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>문화/관광</td>
-                        <td><a href="#">2021 풍류 온(溫, On) 전통문화예술한마당 공연 안내</a></td>
-                        <td>문화유산과</td>
-                        <td>2021-06-14</td>
-                        <td>19</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>교통</td>
-                        <td><a href="#">송도,남동공단 스마트 모빌리티 시민참여단 3기 모집</a></td>
-                        <td>지역행정과</td>
-                        <td>2021-06-14</td>
-                        <td>46</td>
-                    </tr>
-                    <tr class="new">
-                        <td><span>NEW</span></td>
-                        <td>문화/관광</td>
-                        <td><a href="#">2021 풍류 온(溫, On) 전통문화예술한마당 공연 안내</a></td>
-                        <td>문화유산과</td>
-                        <td>2021-06-14</td>
-                        <td>19</td>
-                    </tr>
-                    <tr>
-                        <td>7888</td>
-                        <td>문화/관광</td>
-                        <td><a href="#">「한강하구 랜선 사진 콘서트」 행사 개최 안내</a></td>
-                        <td>남북협력담당관</td>
-                        <td>2021-06-11</td>
-                        <td>803</td>
-                    </tr>
-                    <tr>
-                        <td>7887</td>
-                        <td>행정</td>
-                        <td><a href="#">시 주간행사계획(2021.06.14~06.20)</a></td>
-                        <td>총무과</td>
-                        <td>2021-06-11</td>
-                        <td>233</td>
-                    </tr>
-                    <tr>
-                        <td>7886</td>
-                        <td>문화/관광</td>
-                        <td><a href="#">「한강하구 랜선 사진 콘서트」 행사 개최 안내</a></td>
-                        <td>남북협력담당관</td>
-                        <td>2021-06-11</td>
-                        <td>803</td>
-                    </tr>
-                    <tr>
-                        <td>7885</td>
-                        <td>행정</td>
-                        <td><a href="#">시 주간행사계획(2021.06.14~06.20)</a></td>
-                        <td>총무과</td>
-                        <td>2021-06-11</td>
-                        <td>233</td>
-                    </tr>
-                </table>
-                <!-- pagination -->
-                <div class="pagination">
-                    <ul>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_first.png" alt="처음페이지로"></a>
-                        </li>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_prev.png" alt="이전페이지로"></a>
-                        </li>
-                        <li class="on"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">6</a></li>
-                        <li><a href="#">7</a></li>
-                        <li><a href="#">8</a></li>
-                        <li><a href="#">9</a></li>
-                        <li><a href="#">10</a></li>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_next.png" alt="다음페이지로"></a>
-                        </li>
-                        <li class='btn'><a href="#"><img src="../img/sub_html_common/page_last.png" alt="마지막페이지로"></a>
-                        </li>
-                    </ul>
+                <!-- list_wrap -->
+                <div class="list_wrap">
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">통합 로그인</p>
+                        <!-- login -->
+                        <div class="login">
+                            <div class="container">
+                                <!-- left -->
+                                <div class="left">
+                                    <label for="id">아이디<input type="text" id="id" placeholder="아이디"></label>
+                                    <label for="password">비밀번호<input type="password" id="password"
+                                            placeholder="비밀번호"></label>
+                                    <label><input type="checkbox">아이디저장</label>
+                                </div>
+                                <!-- right -->
+                                <div class="right">
+                                    <a href="#">로그인</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- membership -->
+                        <div class="membership">
+                            <div class="container">
+                                <!-- left -->
+                                <div class="left">
+                                    <p>아직 인천광역시 회원이 아니신가요?</p>
+                                    <a href="#">회원가입하기</a>
+                                </div>
+                                <!-- right -->
+                                <div class="right">
+                                    <p>아이디/비밀번호를 잊으셨나요?</p>
+                                    <a href="#">아이디 찾기</a>
+                                    <a href="#">비밀번호 찾기</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">비회원 로그인</p>
+                        <!-- certification -->
+                        <div class="certification">
+                            <div class="box">
+                                <div class="phone icon"></div>
+                                <p>본인인증은 회원님께서 소지하고 계신 휴대폰을 통해 인증을 진행하는 서비스 입니다. 아래의 휴대폰 인증 을 클릭하시고 본인인증 절차를 진행해 주시기
+                                    바랍니다.</p>
+                                <a href="">휴대폰으로 본인인증 하기</a>
+                            </div>
+                            <!-- box -->
+                            <div class="box">
+                                <div class="ipin icon"></div>
+                                <p>나이스 아이핀은 인터넷상의 개인식별번호를 의미하며, 대면확인이 어려운 인터넷에서 주민번호를 사용하지 않고도 확인할 수 있는 수단입니다.</p>
+                                <a href="">아이핀으로 본인인증 하기</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- list -->
+                    <div class="list notice">
+                        <div class="notice_img"></div>
+                        <!-- title_text_wrap -->
+                        <ul class="title_text_wrap">
+                            <li class="title_text red_text">※ 휴대폰 인증 시</li>
+                            <li class="red_text"><strong>1) 통신사 선택</strong> 후 간편본인확인앱 설치가 되어있지 않은 경우엔 </li>
+                            <li class="red_text"><strong>2) [문자인증]</strong> 을 선택후 인증처리 하시기 바랍니다.</li>
+                        </ul>
+                        <!-- title_text_wrap -->
+                        <ul class="title_text_wrap">
+                            <li class="title_text"><strong>휴대폰 인증 및 아이핀 관련 문의처</strong> : NICE신용평가정보㈜ 고객센터 TEL
+                                1600-1522<br>
+                                ※ NICE아이핀( http://www.niceipin.co.kr )</li>
+                        </ul>
+                        <!-- title_text_wrap -->
+                        <ul class="title_text_wrap">
+                            <li class="title_text"><strong>인천광역시 통합회원 문의</strong> : 정보화담당관실 032-440-2325, 2324</li>
+                        </ul>
+                        <!-- title_text_wrap -->
+                        <ul class="title_text_wrap">
+                            <li class="title_text blue_text"><strong>온라인예약(강좌/교육)에 대한 아이디/비밀번호 문의처</strong></li>
+                        </ul>
+                        <!-- text_list_wrap -->
+                        <ul class="text_list_wrap">
+                            <li class="text_list">여성복지관 : 032-425-1372</li>
+                            <li class="text_list">여성의광장 : 032-815-7101</li>
+                            <li class="text_list">서부여성회관 : 032-458-7360, (헬스/수영) 032-458-7388</li>
+                        </ul>
+                        <!-- title_text_wrap -->
+                        <ul class="title_text_wrap">
+                            <li class="title_text blue_text"><strong>상수도 민원관련 문의처 : 상수도사업본부
+                                    032-720-2065</strong><br><em>※ 사이버민원센터(요금,검침
+                                    등)
+                                    https://minwon.waterworksh.incheon.kr/index.do</em></li>
+                        </ul>
+                        <!-- title_text_wrap -->
+                        <ul class="title_text_wrap">
+                            <li class="title_text"><strong>공무원 임용시험 원서접수, 필기합격/성적조회 문의처</strong></li>
+                        </ul>
+                        <!-- text_list_wrap -->
+                        <ul class="text_list_wrap">
+                            <li class="text_list">지방자치단체 인터넷원서접수센터 : TEL 1522-0660 / https://local.gosi.go.kr</li>
+                        </ul>
+                    </div>
+                    <!-- advantage -->
+                    <div class="advantage">
+                        <div class="box">
+                            <div class="left">
+                                <div class="communication icon"></div>
+                            </div>
+                            <!-- right -->
+                            <div class="right">
+                                <p class="title_text">쉽고 빠른 참여와 소통</p>
+                                <p class="sub_text">- 참여하는 즐거움 이벤트 참여</p>
+                                <p class="sub_text">- 차곡차곡 쌓이는 마일리지로 문자서비스, 교통카드충전, 기부까지</p>
+                                <p class="sub_text">- 정책투표, 청원, 주민제안 등 <em>소통플랫폼</em> 이용을 편리하게</p>
+                            </div>
+                        </div>
+                        <!-- box -->
+                        <div class="box">
+                            <div class="left">
+                                <div class="service icon"></div>
+                            </div>
+                            <!-- right -->
+                            <div class="right">
+                                <p class="title_text">인천광역시 통합웹사이트는 다양한 서비스를 제공합니다.</p>
+                                <p class="sub_text">- 교육, 체험, 견학, 대관 등 신청을 한 곳에서 <em>통합예약서비스</em> 제공</p>
+                                <p class="sub_text">- 인천시의 행정정보, 시험정보, 일자리정보 등 다양한 정보를 만나보세요.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- list -->
+                    <div class="list">
+                        <!-- sub_title -->
+                        <p class="sub_title">통합사이트 목록</p>
+                        <ul class="integration">
+                            <li><a href="#">굿모닝인천</a></li>
+                            <li><a href="#">시험정보</a></li>
+                            <li><a href="#">온라인정책투표</a></li>
+                            <li><a href="#">온라인통합예약</a></li>
+                            <li><a href="#">웹진MOO</a></li>
+                            <li><a href="#">인천광역시장실</a></li>
+                            <li><a href="#">인천데이터포털</a></li>
+                            <li><a href="#">인천은 소통e가득</a></li>
+                            <li><a href="#">인천의 공원</a></li>
+                            <li><a href="#">인천일자리포털</a></li>
+                            <li><a href="#">자치법규정보</a></li>
+                            <li><a href="#">정보공개포털</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -481,7 +463,6 @@
     <!-- footer end -->
     <script src="../js/common.js"></script>
     <script src="../js/sub_html.js"></script>
-    <script src="../js/news.js"></script>
 </body>
 
 </html>
